# ray-tracer

./: .clang-format  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
progress/: image_10.ppm  image_11.ppm  image_13.ppm  image_14.ppm  image_15.ppm  image_16.ppm  image_17.ppm  image_18.ppm  image_19.ppm  image_20.ppm  image_21.ppm  image_22.ppm  image_8.ppm  image_9.ppm
source/: lib.cpp  main.cpp  rtweekend.hpp
source/libs/: camera.hpp  color.hpp  ray.hpp  vec3.hpp
source/objects/: dielectric.hpp  hittable.hpp  hittable_list.h  hittable_list.hpp  lambertian.cpp  lambertian.hpp  material.hpp  metal.hpp  sphere.cpp  sphere.hpp
test/: CMakeLists.txt
test/source/: ray-tracing-one-weekend_test.cpp
